oxiplate-derive/tests/broken/derive/non-name-value.stderr
error: Incorrect syntax for external template. Should look something like:
       #[oxiplate = "/path/to/template/from/templates/directory.txt.oxip"]
 --> tests/broken/derive/non-name-value.rs:4:1
  |
4 | #[oxiplate("foo")]
  | ^^^^^^^^^^^^^^^^^^
