oxiplate-derive/tests/broken/derive/non-name-value.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate("foo")]
struct Data;

fn main() {
    print!("{}", Data);
}